@@ -786,6 +786,10 @@ g_mime_utils_quote_string
 g_mime_utils_unquote_string
 g_mime_utils_text_is_8bit
 g_mime_utils_best_encoding
+g_mime_utils_header_decode_text
+g_mime_utils_header_encode_text
+g_mime_utils_header_decode_phrase
+g_mime_utils_header_encode_phrase
 g_mime_utils_8bit_header_decode
 g_mime_utils_8bit_header_encode
 g_mime_utils_8bit_header_encode_phrase
